[gd_scene load_steps=14 format=3 uid="uid://7f1k0tsx7cnx"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_ci0lx"]
[ext_resource type="PackedScene" uid="uid://1wnfmblulhx0" path="res://scenes/player.tscn" id="1_lp7mr"]
[ext_resource type="Texture2D" uid="uid://bur81k74ku370" path="res://assets/textures/Scene-3.jpg" id="2_r5hb3"]
[ext_resource type="PackedScene" uid="uid://bh1r82178c2u1" path="res://scenes/asteroid.tscn" id="3_6btt6"]
[ext_resource type="PackedScene" uid="uid://d0pr6sltrbqsy" path="res://scenes/player_spawn_area.tscn" id="6_kp4kv"]
[ext_resource type="AudioStream" uid="uid://ck5yudtb8s054" path="res://assets/audio/sfx_laser1.wav" id="7_ymdea"]
[ext_resource type="AudioStream" uid="uid://c60lymk20geng" path="res://assets/audio/hit.wav" id="8_p30em"]
[ext_resource type="PackedScene" uid="uid://bchh760ug2e73" path="res://scenes/healthbar.tscn" id="9_o6ltx"]
[ext_resource type="AudioStream" uid="uid://dcmdym76082h2" path="res://assets/audio/explode.wav" id="9_x64l8"]
[ext_resource type="PackedScene" uid="uid://cnqlw30adoxdq" path="res://scenes/hud.tscn" id="10_s2345"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6ya6y"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 360, 1)
spread = 0.0
initial_velocity_min = -10.0
initial_velocity_max = -10.0
gravity = Vector3(0, 0, 0)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qn0gc"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 360, 1)
spread = 0.0
initial_velocity_min = -20.0
initial_velocity_max = -20.0
gravity = Vector3(0, 0, 0)
scale_min = 3.0
scale_max = 3.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ws6fu"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 360, 1)
spread = 0.0
initial_velocity_min = -30.0
initial_velocity_max = -30.0
gravity = Vector3(0, 0, 0)
scale_min = 5.0
scale_max = 5.0

[node name="Game" type="Node2D"]
position = Vector2(3, 0)
script = ExtResource("1_ci0lx")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_left = -933.0
offset_top = -395.0
offset_right = 2433.0
offset_bottom = 1141.0
texture = ExtResource("2_r5hb3")
stretch_mode = 3

[node name="BackgroundStarFields" type="Node2D" parent="."]

[node name="StarFieldBack" type="GPUParticles2D" parent="BackgroundStarFields"]
z_index = -100
position = Vector2(1004, 901)
amount = 1000
process_material = SubResource("ParticleProcessMaterial_6ya6y")
lifetime = 140.0
preprocess = 280.0

[node name="StarFieldMiddle" type="GPUParticles2D" parent="BackgroundStarFields"]
z_index = -95
position = Vector2(1952, 497)
amount = 250
process_material = SubResource("ParticleProcessMaterial_qn0gc")
lifetime = 140.0
preprocess = 280.0

[node name="StarFieldFront" type="GPUParticles2D" parent="BackgroundStarFields"]
z_index = -90
position = Vector2(1476, 882)
amount = 30
process_material = SubResource("ParticleProcessMaterial_ws6fu")
lifetime = 140.0
preprocess = 280.0

[node name="Lasers" type="Node" parent="."]

[node name="AsteroidRespawnTimer" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[node name="Asteroids" type="Node" parent="."]

[node name="Asteroid" parent="Asteroids" instance=ExtResource("3_6btt6")]
position = Vector2(-496, 454)

[node name="PlayerSpawnPos" type="Node2D" parent="."]
position = Vector2(1110, 502)

[node name="PlayerSpawnArea" parent="PlayerSpawnPos" instance=ExtResource("6_kp4kv")]
position = Vector2(198, 50)

[node name="LaserSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ymdea")

[node name="AsteroidHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_p30em")

[node name="PlayerDieSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_x64l8")

[node name="Player" parent="." instance=ExtResource("1_lp7mr")]
position = Vector2(1303, 552)
rotation = -1.5708

[node name="Healthbar" parent="." instance=ExtResource("9_o6ltx")]
offset_right = 158.0
offset_bottom = 140.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("10_s2345")]
offset_left = 138.0
offset_top = 15.0
offset_right = 178.0
offset_bottom = 55.0

[connection signal="timeout" from="AsteroidRespawnTimer" to="." method="_on_asteroid_respawn_timer_timeout"]
